@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1020 2012/05/18 22:26:06 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1021 2012/05/21 20:27:46 zmedico Exp $
+
+  21 May 2012; Zac Medico <zmedico@gentoo.org> portage-2.1.10.49.ebuild,
+  portage-2.1.6.13.ebuild, portage-2.1.6.7.ebuild, portage-2.2.0_alpha89.ebuild:
+  Tweak to avoid false-positive for repoman portage.internal check wrt env-
+  update.
 
   18 May 2012; Zac Medico <zmedico@gentoo.org> -portage-2.1.10.60.ebuild,
   -portage-2.2.0_alpha105.ebuild:
